analyzer/tests/snapshots/errors__bad_map2.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `map` key and value must be types
  ┌─ [snippet]:3:19
  │
3 │   x: map<address, 100>
  │                   ^^^ this should be a type name


